--- a/infrastructure/resources/verified-permissions.yaml
+++ b/infrastructure/resources/verified-permissions.yaml
@@ -198,3 +198,5 @@ Resources:
 Outputs:
   VisitorManagementPolicyStore:
     Value: !Ref VisitorManagementPolicyStore
+    Export:
+      Name: VisitorManagementPolicyStore
