--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -1,12 +1,24 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Lambda functions resources
+Transform: AWS::Serverless-2016-10-31
+Description: Api Gateway and Lambda Function resources
 
 Resources:
+  ApiGatewayApi:
+    Type: AWS::Serverless::Api
+    Properties:
+      StageName: Prod
+      TracingEnabled: true
+      Cors:
+        AllowMethods: "'OPTIONS,POST,GET'"
+        AllowHeaders: "'Content-Type,Authorization'"
+        AllowOrigin: "'https://vms.alphinecodetech.click'"
+        AllowCredentials: true
+
   # This is a Lambda function config associated with the source code: get-by-id.js
   getVisitorsFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: backend/
+      CodeUri: ../../backend/
       Handler: src/handlers/get-visitors.getVisitorsHandler
       Runtime: nodejs20.x
       Architectures:
@@ -19,11 +31,11 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitorsTable
+            TableName: !ImportValue VisitorsTable
       Environment:
         Variables:
           # Make table name accessible as environment variable from function code during execution
-          VISITORS_TABLE: !GetAtt DatabaseStack.Outputs.VisitorsTable
+          VISITORS_TABLE: !ImportValue VisitorsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
       Events:
@@ -40,7 +52,7 @@ Resources:
   getPermissionsFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: backend/
+      CodeUri: ../../backend/
       Handler: src/handlers/get-permissions.getPermissionsHandler
       Runtime: nodejs20.x
       Architectures:
@@ -56,7 +68,7 @@ Resources:
               Resource: "*"
       Environment:
         Variables:
-          POLICY_STORE_ID: !GetAtt AuthorizationStack.Outputs.VisitorManagementPolicyStore
+          POLICY_STORE_ID: !ImportValue VisitorManagementPolicyStore
       Events:
         Api:
           Type: Api
@@ -72,7 +84,7 @@ Resources:
   getVisitRequestsFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: backend/
+      CodeUri: ../../backend/
       Handler: src/handlers/get-visit-requests.getVisitRequestsHandler
       Runtime: nodejs20.x
       Architectures:
@@ -85,13 +97,13 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
+            TableName: !ImportValue VisitRequestsTable
       Environment:
         Variables:
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
           # Make table name accessible as environment variable from function code during execution
-          VISIT_REQUESTS_TABLE: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
+          VISIT_REQUESTS_TABLE: !ImportValue VisitRequestsTable
       Events:
         Api:
           Type: Api
@@ -110,7 +122,7 @@ Resources:
   getVisitorByIdFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: backend/
+      CodeUri: ../../backend/
       Handler: src/handlers/get-visitor-by-id.getVisitorByIdHandler
       Runtime: nodejs20.x
       Architectures:
@@ -123,11 +135,11 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitorsTable
+            TableName: !ImportValue VisitorsTable
       Environment:
         Variables:
           # Make table name accessible as environment variable from function code during execution
-          VISITORS_TABLE: !GetAtt DatabaseStack.Outputs.VisitorsTable
+          VISITORS_TABLE: !ImportValue VisitorsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
       Events:
@@ -142,7 +154,7 @@ Resources:
   getInviteByTokenFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: backend/
+      CodeUri: ../../backend/
       Handler: src/handlers/get-invite-by-token.getInviteByTokenHandler
       Runtime: nodejs20.x
       Architectures:
@@ -155,11 +167,11 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.InviteLinksTable
+            TableName: !ImportValue InviteLinksTable
       Environment:
         Variables:
           # Make table name accessible as environment variable from function code during execution
-          INVITE_LINKS_TABLE: !GetAtt DatabaseStack.Outputs.InviteLinksTable
+          INVITE_LINKS_TABLE: !ImportValue InviteLinksTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
       Events:
@@ -174,7 +186,7 @@ Resources:
   getVisitRequestByTokenFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: backend/
+      CodeUri: ../../backend/
       Handler: src/handlers/get-visit-request-by-token.getVisitRequestByTokenHandler
       Runtime: nodejs20.x
       Architectures:
@@ -187,11 +199,11 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
+            TableName: !ImportValue VisitRequestsTable
       Environment:
         Variables:
           # Make table name accessible as environment variable from function code during execution
-          VISIT_REQUESTS_TABLE: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
+          VISIT_REQUESTS_TABLE: !ImportValue VisitRequestsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
       Events:
@@ -209,7 +221,7 @@ Resources:
   putVisitorFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: backend/
+      CodeUri: ../../backend/
       Handler: src/handlers/put-visitor.putVisitorHandler
       Runtime: nodejs20.x
       Architectures:
@@ -222,10 +234,10 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitorsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitorsTable
+            TableName: !ImportValue VisitorsTable
       Environment:
         Variables:
-          VISITORS_TABLE: !GetAtt DatabaseStack.Outputs.VisitorsTable
+          VISITORS_TABLE: !ImportValue VisitorsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
           APP_FRONTEND_BASE_URL: https://vms.alphinecodetech.click
@@ -240,7 +252,7 @@ Resources:
   putInviteLinkFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: backend/
+      CodeUri: ../../backend/
       Handler: src/handlers/put-invite-link.putInviteLinkItemHandler
       Runtime: nodejs20.x
       Architectures:
@@ -253,13 +265,13 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the InviteLinksTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.InviteLinksTable
+            TableName: !ImportValue InviteLinksTable
       Environment:
         Variables:
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
           APP_FRONTEND_BASE_URL: https://vms.alphinecodetech.click
-          INVITE_LINKS_TABLE: !GetAtt DatabaseStack.Outputs.InviteLinksTable
+          INVITE_LINKS_TABLE: !ImportValue InviteLinksTable
       Events:
         Api:
           Type: Api
@@ -271,7 +283,7 @@ Resources:
   putVisitRequestFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: backend/
+      CodeUri: ../../backend/
       Handler: src/handlers/put-visit-request.putVisitRequestHandler
       Runtime: nodejs20.x
       Architectures:
@@ -284,12 +296,12 @@ Resources:
       Policies:
         # Give Create/Read/Update/Delete Permissions to the VisitRequestsTable
         - DynamoDBCrudPolicy:
-            TableName: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
+            TableName: !ImportValue VisitRequestsTable
       Environment:
         Variables:
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
-          VISIT_REQUESTS_TABLE: !GetAtt DatabaseStack.Outputs.VisitRequestsTable
+          VISIT_REQUESTS_TABLE: !ImportValue VisitRequestsTable
       Events:
         Api:
           Type: Api
@@ -297,3 +309,7 @@ Resources:
             Path: /visit-request
             Method: POST
             RestApiId: !Ref ApiGatewayApi
+
+Outputs:
+  ApiGatewayApi:
+    Value: !Ref ApiGatewayApi
